test/lambdaCallLhs1.slq

def main(){
	((k:!â„•)mfree=>(if true then k else k))(k) := 0; // TODO
	((x:ğ”¹)wild=>(if true then x else x))(x) := 0:ğ”¹; // error
	return x;
}
